# Hello-Django

./: .gitignore  pyproject.toml
hello_app/: views.py
hello_django/: settings.py  urls.py
templates/: index.html
