[tool.poetry]
name = "hello-django"
version = "0.1.0"
description = "Build a Django web application that displays \"hello, world\""
authors = ["Justin Rhuebottom"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
